[project]
name = "advent-of-code"
requires-python = "==3.12.7"
version = "0.1.0"
dependencies = ["ruff", "uv"]

[tool.ruff]
line-length = 100
exclude = ["**/migrations/*", "*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (detect logical errors)
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (detect bug risks)
    "SIM",    # flake8-simplify (code simplification suggestions)
    "I",      # isort (import sorting)
]
